Fix #2 Code block font size is huge on iOS Safari (#14)

--- a/css/main.scss
+++ b/css/main.scss
@@ -113,3 +113,6 @@ nav.pagination {
   text-decoration: none;
 }
 
+pre {
+  -webkit-text-size-adjust: none;
+}
